# nndescent

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  callgrind.out.10297  callgrind.out.12536  callgrind.out.22644  callgrind.out.58964  callgrind.out.59392  callgrind.out.7250  callgrind.out.8696  callgrind.out.9964  distances.cpp  distances.h  dtypes.cpp  dtypes.d  dtypes.h  gmon.out  nnd  nnd.cpp  nnd.d  nnd.h  pybind11ings.cpp  pybindings.cpp  pyproject.toml  rp_trees.cpp  rp_trees.d  rp_trees.h  scetch.md  setup.py  test.cpp  test.d  test.py  trash.cpp  utils.cpp  utils.d  utils.h
pybindings/: pybind11ings.cpp
src/: distances.cpp  distances.h  dtypes.cpp  dtypes.h  nnd.cpp  nnd.h  rp_trees.cpp  rp_trees.h  utils.cpp  utils.h
tests/: benchmark.py  coil20.cpp  faces.cpp  faces.py  fmnist.cpp  fmnist.py  iris.py  make_test_data.py  mnist.cpp  query.py  simple.cpp  simple.py  sparse.py  sparse_20newsgroups.py  sparse_faces.cpp  sparse_faces.py  test0.cpp  test_distances  test_distances.cpp  test_distances.py  usage.py
